@@ -12,7 +12,7 @@ AS=		ka
 ASFLAGS=
 
 CC=		kc
-CFLAGS=		-wFV -I$ROOT/Inferno/sparc/include -I$ROOT/include
+CFLAGS=		-wFV -I$ROOT/Inferno/$OBJTYPE/include -I$ROOT/Inferno/include -I$ROOT/include
 ANSICPP= -p
 
 LD=		kl
